<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Book Store</string>

    <string name="action_insert_dummy_data">Add a book</string>

    <string name="action_delete_all_entries">Delete All items</string>

    <string name="empty_view_title_text">It\'s a bit lonely here..</string>

    <string name="empty_view_subtitle_text">Get started by adding an item</string>

    <string name="editor_activity_title_new_item">Add an item</string>

    <string name="editor_activity_title_edit_item">Edit item</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="editor_insert_item_successful">item saved</string>

    <string name="editor_insert_item_failed">Error with saving item</string>

    <string name="editor_update_item_successful">item updated</string>

    <string name="editor_update_item_failed">Error with updating item</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_item_successful">item deleted</string>

    <string name="editor_delete_item_failed">Error with deleting item</string>

    <string name="delete_dialog_msg">Delete this item?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="mName">Name</string>

    <string name="mPrice">Price</string>

    <string name="mQuantity">Quantity</string>

    <string name="mSupplier">Supplier</string>

    <string name="mSuppNumber">Supplier Number</string>

    <string name="unknown_price">Unknown price</string>

    <string name="sale">Sale</string>

    <string name="decrease_quantity">-1</string>

    <string name="edit">Edit</string>

    <string name="empty_inventory">out of stock</string>

    <string name="details">Details</string>

    <string name="increase_quantity">+1</string>

    <string name="confirm_deletion">Are you sure you want to delete this item ?</string>

    <string name="confirm">Confirm</string>

    <string name="no">Cancel</string>

    <string name="no_negative">Quantity may not be negative</string>

    <string name="order">Order</string>

</resources>
