<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/CategoryStyle"
            android:text="@string/mName" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">


            <EditText
                android:id="@+id/edit_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/mName"
                android:inputType="textCapWords" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/CategoryStyle"
            android:text="@string/mPrice" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_item_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/mPrice"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/CategoryStyle"
            android:text="@string/mQuantity" />


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">


            <EditText
                android:id="@+id/edit_item_weight"
                style="@style/EditorFieldStyle"
                android:hint="@string/mQuantity"
                android:inputType="number" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/CategoryStyle"
            android:text="@string/mSupplier" />


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">


            <EditText
                android:id="@+id/supp"
                style="@style/EditorFieldStyle"
                android:hint="@string/mSupplier" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/supplier_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/CategoryStyle"
            android:text="@string/mSuppNumber" />


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">


            <EditText
                android:id="@+id/number"
                style="@style/EditorFieldStyle"
                android:hint="@string/mSuppNumber"
                android:inputType="number" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
